lsp/x86asmParser.py
# Generated from x86asm.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class x86asmParser ( Parser ):

    grammarFileName = "x86asm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'BYTE'", "'WORD'", "'DWORD'", "'DSEG'", 
                     "'CSEG'", "'INCLUDE'", "'TITLE'", "'END'", "'ORG'", 
                     "'ENDIF'", "'IF'", "'EQU'", "'DW'", "'DB'", "'DD'", 
                     "'PTR'", "'OFFSET'", "'RW'", "'RB'", "'RS'", "'LENGTH'", 
                     "'EQ'", "'NE'", "'MOD'", "<INVALID>", "'AH'", "'AL'", 
                     "'BH'", "'BL'", "'CH'", "'CL'", "'DH'", "'DL'", "'AX'", 
                     "'BX'", "'CX'", "'DX'", "'CI'", "'DI'", "'BP'", "'SP'", 
                     "'IP'", "'CS'", "'DS'", "'ES'", "'SS'", "'AAA'", "'AAD'", 
                     "'AAM'", "'AAS'", "'ADC'", "'ADD'", "'AND'", "'CALL'", 
                     "'CBW'", "'CLC'", "'CLD'", "'CLI'", "'CMC'", "'CMP'", 
                     "'CMPSB'", "'CMPSW'", "'CWD'", "'DAA'", "'DAS'", "'DEC'", 
                     "'DIV'", "'ESC'", "'HLT'", "'IDIV'", "'IMUL'", "'IN'", 
                     "'INC'", "'INT'", "'INTO'", "'IRET'", "'JA'", "'JAE'", 
                     "'JB'", "'JBE'", "'JC'", "'JE'", "'JG'", "'JGE'", "'JL'", 
                     "'JLE'", "'JNA'", "'JNAE'", "'JNB'", "'JNBE'", "'JNC'", 
                     "'JNE'", "'JNG'", "'JNGE'", "'JNL'", "'JNLE'", "'JNO'", 
                     "'JNP'", "'JNS'", "'JNZ'", "'JO'", "'JP'", "'JPE'", 
                     "'JPO'", "'JS'", "'JZ'", "'JCXZ'", "'JMP'", "'JMPS'", 
                     "'JMPF'", "'LAHF'", "'LDS'", "'LEA'", "'LES'", "'LOCK'", 
                     "'LODS'", "'LODSB'", "'LODSW'", "'LOOP'", "'LOOPE'", 
                     "'LOOPNE'", "'LOOPNZ'", "'LOOPZ'", "'MOV'", "'MOVS'", 
                     "'MOVSB'", "'MOVSW'", "'MUL'", "'NEG'", "'NOP'", "'NOT'", 
                     "'OR'", "'OUT'", "'POP'", "'POPF'", "'PUSH'", "'PUSHF'", 
                     "'RCL'", "'RCR'", "'RET'", "'RETN'", "'RETF'", "'ROL'", 
                     "'ROR'", "'SAHF'", "'SAL'", "'SAR'", "'SALC'", "'SBB'", 
                     "'SCASB'", "'SCASW'", "'SHL'", "'SHR'", "'STC'", "'STD'", 
                     "'STI'", "'STOSB'", "'STOSW'", "'SUB'", "'TEST'", "'WAIT'", 
                     "'XCHG'", "'XLAT'", "'XOR'", "'REP'", "'REPE'", "'REPNE'", 
                     "'REPNZ'", "'REPZ'", "'*'", "'/'", "'$'", "'+'", "'-'", 
                     "'!'", "':'", "'.'", "'('", "')'", "','", "';'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "BYTE", "WORD", "DWORD", "DSEG", "CSEG", 
                      "INCLUDE", "TITLE", "END", "ORG", "ENDIF", "IF", "EQU", 
                      "DW", "DB", "DD", "PTR", "OFFSET", "RW", "RB", "RS", 
                      "LENGTH", "EQ", "NE", "MOD", "COMMENT", "AH", "AL", 
                      "BH", "BL", "CH", "CL", "DH", "DL", "AX", "BX", "CX", 
                      "DX", "CI", "DI", "BP", "SP", "IP", "CS", "DS", "ES", 
                      "SS", "AAA", "AAD", "AAM", "AAS", "ADC", "ADD", "AND", 
                      "CALL", "CBW", "CLC", "CLD", "CLI", "CMC", "CMP", 
                      "CMPSB", "CMPSW", "CWD", "DAA", "DAS", "DEC", "DIV", 
                      "ESC", "HLT", "IDIV", "IMUL", "IN", "INC", "INT", 
                      "INTO", "IRET", "JA", "JAE", "JB", "JBE", "JC", "JE", 
                      "JG", "JGE", "JL", "JLE", "JNA", "JNAE", "JNB", "JNBE", 
                      "JNC", "JNE", "JNG", "JNGE", "JNL", "JNLE", "JNO", 
                      "JNP", "JNS", "JNZ", "JO", "JP", "JPE", "JPO", "JS", 
                      "JZ", "JCXZ", "JMP", "JMPS", "JMPF", "LAHF", "LDS", 
                      "LEA", "LES", "LOCK", "LODS", "LODSB", "LODSW", "LOOP", 
                      "LOOPE", "LOOPNE", "LOOPNZ", "LOOPZ", "MOV", "MOVS", 
                      "MOVSB", "MOVSW", "MUL", "NEG", "NOP", "NOT", "OR", 
                      "OUT", "POP", "POPF", "PUSH", "PUSHF", "RCL", "RCR", 
                      "RET", "RETN", "RETF", "ROL", "ROR", "SAHF", "SAL", 
                      "SAR", "SALC", "SBB", "SCASB", "SCASW", "SHL", "SHR", 
                      "STC", "STD", "STI", "STOSB", "STOSW", "SUB", "TEST", 
                      "WAIT", "XCHG", "XLAT", "XOR", "REP", "REPE", "REPNE", 
                      "REPNZ", "REPZ", "STAR", "SLASH", "DOLLAR", "PLUS", 
                      "MINUS", "NOT_", "COLON", "DOT", "RP", "LP", "COMMA", 
                      "SEMI", "LB", "RB_", "NAME", "NUMBER", "STRING", "EOL", 
                      "WS" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_instruction = 2
    RULE_lbl = 3
    RULE_assemblerdirective = 4
    RULE_rw = 5
    RULE_rb = 6
    RULE_rs = 7
    RULE_cseg = 8
    RULE_dseg = 9
    RULE_dw = 10
    RULE_db = 11
    RULE_dd = 12
    RULE_equ = 13
    RULE_if_ = 14
    RULE_assemblerexpression = 15
    RULE_assemblerlogical = 16
    RULE_assemblerterm = 17
    RULE_endif_ = 18
    RULE_end = 19
    RULE_org = 20
    RULE_title = 21
    RULE_include_ = 22
    RULE_expressionlist = 23
    RULE_label = 24
    RULE_expression = 25
    RULE_multiplyingExpression = 26
    RULE_argument = 27
    RULE_ptr = 28
    RULE_dollar = 29
    RULE_register_ = 30
    RULE_string_ = 31
    RULE_name = 32
    RULE_number = 33
    RULE_opcode = 34
    RULE_rep = 35
    RULE_sign = 36

    ruleNames =  [ "prog", "line", "instruction", "lbl", "assemblerdirective", 
                   "rw", "rb", "rs", "cseg", "dseg", "dw", "db", "dd", "equ", 
                   "if_", "assemblerexpression", "assemblerlogical", "assemblerterm", 
                   "endif_", "end", "org", "title", "include_", "expressionlist", 
                   "label", "expression", "multiplyingExpression", "argument", 
                   "ptr", "dollar", "register_", "string_", "name", "number", 
                   "opcode", "rep", "sign" ]

    EOF = Token.EOF
    BYTE=1
    WORD=2
    DWORD=3
    DSEG=4
    CSEG=5
    INCLUDE=6
    TITLE=7
    END=8
    ORG=9
    ENDIF=10
    IF=11
    EQU=12
    DW=13
    DB=14
    DD=15
    PTR=16
    OFFSET=17
    RW=18
    RB=19
    RS=20
    LENGTH=21
    EQ=22
    NE=23
    MOD=24
    COMMENT=25
    AH=26
    AL=27
    BH=28
    BL=29
    CH=30
    CL=31
    DH=32
    DL=33
    AX=34
    BX=35
    CX=36
    DX=37
    CI=38
    DI=39
    BP=40
    SP=41
    IP=42
    CS=43
    DS=44
    ES=45
    SS=46
    AAA=47
    AAD=48
    AAM=49
    AAS=50
    ADC=51
    ADD=52
    AND=53
    CALL=54
    CBW=55
    CLC=56
    CLD=57
    CLI=58
    CMC=59
    CMP=60
    CMPSB=61
    CMPSW=62
    CWD=63
    DAA=64
    DAS=65
    DEC=66
    DIV=67
    ESC=68
    HLT=69
    IDIV=70
    IMUL=71
    IN=72
    INC=73
    INT=74
    INTO=75
    IRET=76
    JA=77
    JAE=78
    JB=79
    JBE=80
    JC=81
    JE=82
    JG=83
    JGE=84
    JL=85
    JLE=86
    JNA=87
    JNAE=88
    JNB=89
    JNBE=90
    JNC=91
    JNE=92
    JNG=93
    JNGE=94
    JNL=95
    JNLE=96
    JNO=97
    JNP=98
    JNS=99
    JNZ=100
    JO=101
    JP=102
    JPE=103
    JPO=104
    JS=105
    JZ=106
    JCXZ=107
    JMP=108
    JMPS=109
    JMPF=110
    LAHF=111
    LDS=112
    LEA=113
    LES=114
    LOCK=115
    LODS=116
    LODSB=117
    LODSW=118
    LOOP=119
    LOOPE=120
    LOOPNE=121
    LOOPNZ=122
    LOOPZ=123
    MOV=124
    MOVS=125
    MOVSB=126
    MOVSW=127
    MUL=128
    NEG=129
    NOP=130
    NOT=131
    OR=132
    OUT=133
    POP=134
    POPF=135
    PUSH=136
    PUSHF=137
    RCL=138
    RCR=139
    RET=140
    RETN=141
    RETF=142
    ROL=143
    ROR=144
    SAHF=145
    SAL=146
    SAR=147
    SALC=148
    SBB=149
    SCASB=150
    SCASW=151
    SHL=152
    SHR=153
    STC=154
    STD=155
    STI=156
    STOSB=157
    STOSW=158
    SUB=159
    TEST=160
    WAIT=161
    XCHG=162
    XLAT=163
    XOR=164
    REP=165
    REPE=166
    REPNE=167
    REPNZ=168
    REPZ=169
    STAR=170
    SLASH=171
    DOLLAR=172
    PLUS=173
    MINUS=174
    NOT_=175
    COLON=176
    DOT=177
    RP=178
    LP=179
    COMMA=180
    SEMI=181
    LB=182
    RB_=183
    NAME=184
    NUMBER=185
    STRING=186
    EOL=187
    WS=188

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(x86asmParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(x86asmParser.LineContext)
            else:
                return self.getTypedRuleContext(x86asmParser.LineContext,i)


        def getRuleIndex(self):
            return x86asmParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = x86asmParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -140737486458896) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & -1) != 0) or ((((_la - 128)) & ~0x3f) == 0 and ((1 << (_la - 128)) & 649226431829639167) != 0):
                self.state = 74
                self.line()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(x86asmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOL(self):
            return self.getToken(x86asmParser.EOL, 0)

        def lbl(self):
            return self.getTypedRuleContext(x86asmParser.LblContext,0)


        def assemblerdirective(self):
            return self.getTypedRuleContext(x86asmParser.AssemblerdirectiveContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(x86asmParser.InstructionContext)
            else:
                return self.getTypedRuleContext(x86asmParser.InstructionContext,i)


        def NOT_(self, i:int=None):
            if i is None:
                return self.getTokens(x86asmParser.NOT_)
            else:
                return self.getToken(x86asmParser.NOT_, i)

        def getRuleIndex(self):
            return x86asmParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = x86asmParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 82
                self.lbl()


            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 18, 19, 20, 177, 184]:
                self.state = 85
                self.assemblerdirective()
                pass
            elif token in [47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169]:
                self.state = 86
                self.instruction()
                pass
            elif token in [175, 187]:
                pass
            else:
                pass
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==175:
                self.state = 89
                self.match(x86asmParser.NOT_)
                self.state = 90
                self.instruction()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(x86asmParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opcode(self):
            return self.getTypedRuleContext(x86asmParser.OpcodeContext,0)


        def rep(self):
            return self.getTypedRuleContext(x86asmParser.RepContext,0)


        def expressionlist(self):
            return self.getTypedRuleContext(x86asmParser.ExpressionlistContext,0)


        def getRuleIndex(self):
            return x86asmParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = x86asmParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 165)) & ~0x3f) == 0 and ((1 << (_la - 165)) & 31) != 0):
                self.state = 98
                self.rep()


            self.state = 101
            self.opcode()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737423540238) != 0) or ((((_la - 131)) & ~0x3f) == 0 and ((1 << (_la - 131)) & 65458325248016385) != 0):
                self.state = 102
                self.expressionlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LblContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(x86asmParser.LabelContext,0)


        def COLON(self):
            return self.getToken(x86asmParser.COLON, 0)

        def getRuleIndex(self):
            return x86asmParser.RULE_lbl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLbl" ):
                listener.enterLbl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLbl" ):
                listener.exitLbl(self)




    def lbl(self):

        localctx = x86asmParser.LblContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lbl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.label()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==176:
                self.state = 106
                self.match(x86asmParser.COLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssemblerdirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def org(self):
            return self.getTypedRuleContext(x86asmParser.OrgContext,0)


        def end(self):
            return self.getTypedRuleContext(x86asmParser.EndContext,0)


        def if_(self):
            return self.getTypedRuleContext(x86asmParser.If_Context,0)


        def endif_(self):
            return self.getTypedRuleContext(x86asmParser.Endif_Context,0)


        def equ(self):
            return self.getTypedRuleContext(x86asmParser.EquContext,0)


        def db(self):
            return self.getTypedRuleContext(x86asmParser.DbContext,0)


        def dw(self):
            return self.getTypedRuleContext(x86asmParser.DwContext,0)


        def cseg(self):
            return self.getTypedRuleContext(x86asmParser.CsegContext,0)


        def dd(self):
            return self.getTypedRuleContext(x86asmParser.DdContext,0)


        def dseg(self):
            return self.getTypedRuleContext(x86asmParser.DsegContext,0)


        def title(self):
            return self.getTypedRuleContext(x86asmParser.TitleContext,0)


        def include_(self):
            return self.getTypedRuleContext(x86asmParser.Include_Context,0)


        def rw(self):
            return self.getTypedRuleContext(x86asmParser.RwContext,0)


        def rb(self):
            return self.getTypedRuleContext(x86asmParser.RbContext,0)


        def rs(self):
            return self.getTypedRuleContext(x86asmParser.RsContext,0)


        def DOT(self):
            return self.getToken(x86asmParser.DOT, 0)

        def getRuleIndex(self):
            return x86asmParser.RULE_assemblerdirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssemblerdirective" ):
                listener.enterAssemblerdirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssemblerdirective" ):
                listener.exitAssemblerdirective(self)




    def assemblerdirective(self):

        localctx = x86asmParser.AssemblerdirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assemblerdirective)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.org()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.end()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.if_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.endif_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.equ()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.db()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.dw()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.cseg()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 117
                self.dd()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 118
                self.dseg()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 119
                self.title()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 120
                self.include_()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 121
                self.rw()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 122
                self.rb()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 123
                self.rs()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 124
                self.match(x86asmParser.DOT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RwContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RW(self):
            return self.getToken(x86asmParser.RW, 0)

        def expression(self):
            return self.getTypedRuleContext(x86asmParser.ExpressionContext,0)


        def name(self):
            return self.getTypedRuleContext(x86asmParser.NameContext,0)


        def getRuleIndex(self):
            return x86asmParser.RULE_rw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRw" ):
                listener.enterRw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRw" ):
                listener.exitRw(self)




    def rw(self):

        localctx = x86asmParser.RwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==184:
                self.state = 127
                self.name()


            self.state = 130
            self.match(x86asmParser.RW)
            self.state = 131
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RbContext(ParserRuleContext):
        __slots__ = 'parser'
